--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,10 @@ h1{
 	box-shadow: 0 5px 20px 3px rgba(0,0,0,.7);
 	border-radius: 5px;
 }
+a{
+	text-decoration: none;
+	color: salmon;
+}
 
 /*Animasi*/
 @keyframes fade{
